@@ -4,6 +4,7 @@ var localized_strings,
         localized_strings_default = {
             empty_wishlist: "Empty Wishlist",
 			remove_owned_wishlist: "Remove All Owned From Wishlist",
+			add_to_wishlist: "Add to Wishlist",
             purchase_date: "(Purchased __date__)",
             options: "Options",
             website: "Website",
@@ -52,6 +53,7 @@ var localized_strings,
             options_spamcommentregex: "Regular Expression string:",
             options_customizespamcommentregex: "(Customize)",
             options_steamcardexchange: "Show SteamCardExchange links on badges",
+			options_wlbuttoncommunityapp: "Show \"Add to Wishlist\" button on community app hubs",
             options_es_bg: "Set Custom Background on Edit Profile Screen",
             options_showallachievements: "Show achievement stats on \"All Games\" page",
             options_market_total: "Show Transaction Summary on Market",
